♻️ change gitignore name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "cra-template-gleisonback",
+  "name": "socialcar",
+  "type": "module",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
