--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
   "license": "ISC",
   "devDependencies": {
     "@faker-js/faker": "^9.0.3",
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.13",
     "@types/joi": "^17.2.3",
     "@types/mongodb": "^4.0.7",
     "@types/node": "^22.7.7",
-    "@types/supertest": "^6.0.2"
+    "@types/supertest": "^6.0.2",
+    "bcrypt": "^5.1.1"
   },
   "dependencies": {
     "cors": "^2.8.5",
