--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/mongodb": "^4.0.7",
     "@types/node": "^22.7.7",
     "@types/supertest": "^6.0.2",
+    "@types/uuid": "^10.0.0",
     "bcrypt": "^5.1.1"
   },
   "dependencies": {
@@ -41,6 +42,7 @@
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.1",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "uuid": "^11.0.3"
   }
 }
