--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "tsc && node dist/index.js",
     "dev": "tsx watch src/index.ts",
     "unit:test": "dotenv -e .env.test jest -- -i --testPathPattern=tests/unit",
     "integration:test": "dotenv -e .env.test jest -- -i --testPathPattern=tests/integration"
