--- a/package.json
+++ b/package.json
@@ -21,21 +21,25 @@
     "@types/jest": "^29.5.13",
     "@types/joi": "^17.2.3",
     "@types/mongodb": "^4.0.7",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.7.7",
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^10.0.0",
     "bcrypt": "^5.1.1"
   },
   "dependencies": {
+    "@google-cloud/storage": "^7.14.0",
     "cors": "^2.8.5",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-async-error": "^0.0.2",
     "express-async-errors": "^3.1.1",
+    "googleapis": "^144.0.0",
     "jest": "^29.7.0",
     "joi": "^17.13.3",
     "mongodb": "^6.9.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
