--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "esModuleInterop": true,
     "module": "ESNext",
     "moduleResolution": "Node",
+    "target": "ES2015", 
     "baseUrl": "src",
   },
   "ts-node": {
