--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "mongodb": "^6.9.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7",
+    "path": "^0.12.7",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
